# vid_submission

./: CMakeLists.txt  README.md  package.xml
include/: motion_commands.h  ros_functs.h
launch/: controller.launch  demo.launch  materov.launch  pi.launch
scripts/: demonstrate.py  processor.py  rotation_stabiliser.py  stick.py
src/: CMakeLists.txt
src/joystick/: input.cpp  joystick.h  output.cpp
src/keyboard_control/: keyboard_control.h
src/thrustered_vehicle_motioncontroller/: vehicle_config.h
src/thrustered_vehicle_motioncontroller-master/: CMakeLists.txt  thrustered_vehicle_motion_controller.cpp  thrustered_vehicle_motion_controller.h  vehicle_config.xml
src/thrustered_vehicle_motioncontroller-master/thrusters_controller/: thruster_variables.cpp  thruster_variables.h  thrusters_controller.cpp  thrusters_controller.h
src/thrustered_vehicle_motioncontroller/thrusters_controller/: thrusters_controller.h
